c4prj2_input/grade.txt
Grading at Fri Aug  2 21:51:17 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c:5:23: error: unknown type name ‘future_card_t’
 void add_future_card (future_card_t* fc, size_t index, card_t* ptr) {
                       ^
future.c: In function ‘future_cards_from_deck’:
future.c:17:11: error: ‘return’ with a value, in function returning void [-Werror]
    return NULL;
           ^
future.c:19:13: error: invalid operands to binary == (have ‘future_cards_t {aka struct future_cards_tag}’ and ‘void *’)
   if (fc[i] == NULL) {
             ^
future.c:20:16: error: incompatible type for argument 1 of ‘add_card_to’
    add_card_to(fc[i], *deck->cards[i]);
                ^
In file included from future.h:3:0,
                 from future.c:3:
deck.h:17:6: note: expected ‘deck_t * {aka struct deck_tag *}’ but argument is of type ‘future_cards_t {aka struct future_cards_tag}’
 void add_card_to(deck_t * deck, card_t c);
      ^
future.c: At top level:
future.c:25:1: error: unterminated comment
 /*
 ^
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
